tolist -> collect(Collectors.toList()) 수정